--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,9 +12,9 @@ name = "lc3as"
 path = "bin/main.rs"
 
 [dependencies]
-colored = "1.6"
-clap = "~2.29"
-lazy_static = "1.0"
+colored = "*"
+clap = "*"
+lazy_static = "1.*"
 
 [profile.release]
 lto = true
