--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,15 +12,15 @@ name = "lc3as"
 path = "bin/main.rs"
 
 [dependencies]
-colored = "*"
-clap = "*"
-lazy_static = "1.*"
+colored = "^1.9.0"
+clap = "^2.33.0"
+lazy_static = "1.4.0"
 
 [profile.release]
 lto = true
 
 [dev-dependencies]
-criterion = "0.2"
+criterion = "^0.3"
 
 [[bench]]
 name = "bench"
