--- a/.github/workflows/testing.yml
+++ b/.github/workflows/testing.yml
@@ -19,6 +19,7 @@ jobs:
         with:
           toolchain: nightly
           components: clippy
+          override: true
       - name: Build
         run: cargo build --verbose
       - name: Run tests
