--- a/.github/workflows/testing.yml
+++ b/.github/workflows/testing.yml
@@ -21,9 +21,9 @@ jobs:
           components: clippy
           override: true
       - name: Build
-        run: cargo build --verbose
+        run: cargo build
       - name: Run tests
-        run: cargo test --verbose
+        run: cargo test
       - uses: actions-rs/clippy@master
         with:
           args: --all-features --all-targets
