--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name = "lc3-rs"
 version = "0.1.0"
-authors = ["Josh Hill <josh.hill189@gmail.com>"]
+authors = ["Josh Hill <josh@pyxxilated.studio>"]
 
 [lib]
 name = "lc3lib"
@@ -19,7 +19,7 @@ lazy_static = "1.4.0"
 [profile.release]
 # less code to include into binary
 panic = 'abort'
-# optimization over all codebase ( better optimization, slower build )
+# optimization over all codebase (better optimization, slower build)
 codegen-units = 1
 # optimization for size
 opt-level = 's'
