--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,3 +1,5 @@
+cargo-features = ["strip"]
+
 [package]
 name = "lc3-rs"
 version = "0.1.0"
@@ -25,6 +27,7 @@ codegen-units = 1
 opt-level = 's'
 # link time optimization using using whole-program analysis
 lto = "thin"
+strip = "symbols"
 
 [dev-dependencies]
 criterion = "^0.3"
