--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,9 @@
+cargo-features = ["strip"]
+
 [package]
 name = "lc3-rs"
 version = "0.1.0"
-authors = ["Josh Hill <josh.hill189@gmail.com>"]
+authors = ["Josh Hill <josh@pyxxilated.studio>"]
 
 [lib]
 name = "lc3lib"
@@ -19,12 +21,13 @@ lazy_static = "1.4.0"
 [profile.release]
 # less code to include into binary
 panic = 'abort'
-# optimization over all codebase ( better optimization, slower build )
+# optimization over all codebase (better optimization, slower build)
 codegen-units = 1
 # optimization for size
 opt-level = 's'
 # link time optimization using using whole-program analysis
 lto = "thin"
+strip = "symbols"
 
 [dev-dependencies]
 criterion = "^0.3"
